plugins {
    id 'java'
    id 'war'
}

group 'ninhnq.web'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.7.1'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean

dependencies {
    compileOnly('javax:javaee-api:8.0.1')
    compileOnly('javax.mvc:javax.mvc-api:1.0.0')
    compileOnly('javax.xml.ws:jaxws-api:2.3.1')
    compileOnly('javax.jws:javax.jws-api:1.1')
    implementation('org.hibernate:hibernate-core:5.4.30.Final')
    implementation('org.hibernate.validator:hibernate-validator:6.2.0.Final')
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    // https://mvnrepository.com/artifact/javax.servlet/jstl
    implementation 'javax.servlet:jstl:1.2'
    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.5.Final'
    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
    implementation 'mysql:mysql-connector-java:8.0.26'
    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
    implementation 'commons-fileupload:commons-fileupload:1.4'
}

test {
    useJUnitPlatform()
}